[package]
name = "computer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
tokio = { version = "1", features = ["full"] }
axum = "0.6.12"
serde = { version = "1.0.159", features = ["derive"]}
tower-http = { version = "0.4.0", features = ["cors"]}
